# Porta.Pty

./: README.md
.github/workflows/: BuildAndRunTests.yml  PublishIncrementalNuget.yml  PublishNuget.yml  build-linux.yml  build-macos.yml  build-windows.yml
src/: Porta.Pty.sln
src/.github/workflows/: build-linux.yml
src/Porta.Pty/: GlobalSuppressions.cs  IPtyConnection.cs  IPtyProvider.cs  PlatformServices.cs  Porta.Pty.csproj  PtyExitedEventArgs.cs  PtyOptions.cs  PtyProvider.cs
src/Porta.Pty.Native/: CMakeLists.txt  README.md  build.sh  porta_pty.c
src/Porta.Pty.Tests/: Porta.Pty.Tests.csproj  PtyTests.cs
src/Porta.Pty/Linux/: NativeMethods.cs  PtyConnection.cs  PtyProvider.cs
src/Porta.Pty/Mac/: NativeMethods.cs  PtyConnection.cs  PtyProvider.cs
src/Porta.Pty/Unix/: PtyConnection.cs  PtyProvider.cs  PtyStream.cs
src/Porta.Pty/Windows/: JobObject.cs  NativeMethods.cs  PseudoConsoleConnection.cs  PtyProvider.cs  WindowsArguments.cs
